@@ -47,47 +47,16 @@
     <attribute py:pytype="str" ns="http://namespaces.zeit.de/CMS/document" name="date_last_checkout">2016-01-13T09:21:36.263169+00:00</attribute>
   </head>
   <body>
-    <supertitle>Test CP</supertitle>
-    <title>Test CP</title>
+    <supertitle>ZMO</supertitle>
+    <title>card-teaser</title>
     <subtitle>Das ist meine Test CP.</subtitle>
-
-    <cluster area="id-6a3c9692-f2bd-4234-8890-a84f1924ef843" visible="True" kind="solo">
-      <region area="id-74baeca3-7dbb-437d-8e70-3a3d079d69d49" visible="True" kind="solo">
-        <container cp:type="teaser" module="zmo-leader-fullwidth" cp:__name__="id-6b5d10f3-3009-4b7b-a164-484511f502e8">
-          <block href="http://xml.zeit.de/zeit-magazin/test-cp/essen-geniessen-spargel-lamm" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/essen-geniessen-spargel-lamm" year="2014" issue="17" ressort="Lebensart" author="Elisabeth Raether" contenttype="article" publication-date="" expires="" date-last-modified="2014-04-15T10:11:45+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-04-16T06:00:00+00:00">
-            <supertitle py:pytype="str">Kochen</supertitle>
-            <teaser_supertitle py:pytype="str">Kochen</teaser_supertitle>
-            <title py:pytype="str">Probier's mal mit Gemütlichkeit</title>
-            <text py:pytype="str">"Beach body" – auch dieses Jahr leider wieder ohne uns. Wir braten Lammkoteletts, essen jede Menge Kartoffeln und zum Abschluss Zuckersüßes.</text>
-            <description py:pytype="str">"Beach body" – auch dieses Jahr leider wieder ohne uns. Wir braten Lammkoteletts, essen jede Menge Kartoffeln und zum Abschluss Zuckersüßes.</description>
-            <byline py:pytype="str">von Elisabeth Raether</byline>
-            <breadcrumb_title xsi:nil="true"/>
-            <image base-id="http://xml.zeit.de/zeit-magazin/2014/17/lamm-aubergine/" type="jpg" alt="Lammkoteletts mit Auberginenmus" align="left" publication-date="" expires="2014-05-17T07:59:27+00:00">
-              <bu py:pytype="str">Der Frühling ist ein schöner Anlass, endlich mal wieder viel zu essen</bu>
-              <copyright py:pytype="str">© Andreas Lux</copyright>
-            </image>
-            <author href="http://xml.zeit.de/autoren/R/Elisabeth_Raether" publication-date="" expires="">
-              <display_name py:pytype="str">Elisabeth Raether</display_name>
-            </author>
-          </block>
-        </container>
-        </region>
-    </cluster>
 
     <cluster area="id-6a3c9692-f2bd-4234-8890-a84f1924ef83" visible="True" kind="duo">
         <region area="id-74baeca3-7dbb-437d-8e70-3a3d07969d49" visible="True" kind="major">
-            <container cp:type="teaser" module="zmo-square-large" cp:__name__="id-f8f46488-75ea-46f4-aaff-7654b4e1c805MAJOR">
-              <block href="http://xml.zeit.de/zeit-magazin/test-cp/vegetarisch-kochen-fuer-gaeste" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/vegetarisch-kochen-fuer-gaeste" year="2014" issue="17" ressort="Lebensart" author="Elisabeth Raether" contenttype="article" publication-date="" expires="" date-last-modified="2014-04-15T10:10:28+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-04-16T06:00:00+00:00">
-              </block>
-            </container>
-            <container cp:type="teaser" module="zmo-landscape-large-photo" cp:__name__="id-eae7c703-98e9-491a-a30d-c1c5cebd2371AAAAAMAJOR">
-              <block href="http://xml.zeit.de/zeit-magazin/test-cp/kochen-wuerzen-veganer-kuchen" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/kochen-wuerzen-veganer-kuchen" year="2014" issue="17" ressort="Lebensart" author="Elisabeth Raether" contenttype="article" publication-date="" expires="" date-last-modified="2014-04-24T15:07:32+00:00" date-first-released="2014-04-24T10:28:28.444312+00:00" date-last-published="2014-04-24T10:28:28.444312+00:00" last-semantic-change="2014-04-24T15:07:31.405668+00:00">
-              </block>
-            </container>
-            <container cp:type="teaser" module="zmo-square-large-light" cp:__name__="id-f8f46488-75ea-46f4-aaff-7654b4e1c805MAJOR">
-              <block href="http://xml.zeit.de/zeit-magazin/test-cp/vegetarisch-kochen-fuer-gaeste" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/vegetarisch-kochen-fuer-gaeste" year="2014" issue="17" ressort="Lebensart" author="Elisabeth Raether" contenttype="article" publication-date="" expires="" date-last-modified="2014-04-15T10:10:28+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-04-16T06:00:00+00:00">
-              </block>
-            </container>
+          <container cp:type="teaser" module="zmo-square-large" cp:__name__="id-f8f46488-75ea-46f4-aaff-7654b4e1c805MAJOR">
+            <block href="http://xml.zeit.de/artikel/artikel-ohne-assets" uniqueId="http://xml.zeit.de/artikel/artikel-ohne-assets" year="2008" issue="26" ressort="Lebensart" contenttype="article" publication-date="" expires="" date-last-modified="2014-03-17T11:58:05+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-03-17T09:58:02.437939+00:00">
+            </block>
+          </container>
         </region>
         <region area="id-6dd22838-9f14-4294-a96d-3e2fa1a7bc91" visible="True" kind="minor">
            <container cp:type="teaser" module="zmo-card-citation" hide-dupes="True" visible="True" cp:__name__="id-bff224c9-088e-40d4-987d-9d986de804bdHHHHHcardcMAJOR"  background_color="a1f88c">
