@@ -174,78 +174,6 @@
             </author>
           </block>
         </container>
-        <container cp:type="teaser" module="zmo-card-share-read" hide-dupes="True" visible="True" cp:__name__="id-381c8f6a-dc39-40e3-a919-09aa41eaa7c4" background_color="a1e6ba">
-          <block href="http://xml.zeit.de/zeit-magazin/test-cp/card-share-read" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/card-share-read" year="2014" issue="19" ressort="zeit-magazin" contenttype="article" publication-date="" expires="" author="Maria Exner" date-last-modified="2014-05-05T09:37:35+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-05-05T09:37:21.413549+00:00">
-            <supertitle py:pytype="str">spitzmarke</supertitle>
-            <teaser_supertitle py:pytype="str">Share &amp; Read</teaser_supertitle>
-            <title py:pytype="str">Teaserüberschrift</title>
-            <text py:pytype="str">Mein Teasertext</text>
-            <description py:pytype="str">Mein Teasertext</description>
-            <byline xsi:nil="true"/>
-            <breadcrumb_title xsi:nil="true"/>
-            <image base-id="http://xml.zeit.de/zeit-magazin/test-cp/card-share-read-bildergruppe/" type="png" align="left" publication-date="" expires="">
-              <bu xsi:nil="true"/>
-              <copyright py:pytype="str">© Zeit</copyright>
-            </image>
-            <author href="http://xml.zeit.de/autoren/E/Maria_Exner/index" publication-date="" expires="">
-              <display_name py:pytype="str">Maria Exner</display_name>
-            </author>
-          </block>
-        </container>
-        <container cp:type="teaser" module="zmo-card-flip-share" hide-dupes="True" visible="True" cp:__name__="id-381c8f6a-dc39-40e3-a919-09aa41eaa7c5" background_color="f29fc5">
-          <block href="http://xml.zeit.de/zeit-magazin/test-cp/card-flip-share" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/card-flip-share" year="2014" issue="19" ressort="zeit-magazin" contenttype="article" publication-date="" expires="" author="Maria Exner" date-last-modified="2014-05-05T09:37:35+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-05-05T09:37:21.413549+00:00">
-            <supertitle py:pytype="str">spitzmarke</supertitle>
-            <teaser_supertitle py:pytype="str">Flip &amp; Share</teaser_supertitle>
-            <title py:pytype="str">Teaserüberschrift</title>
-            <text py:pytype="str">Mein Teasertext</text>
-            <description py:pytype="str">Mein Teasertext</description>
-            <byline xsi:nil="true"/>
-            <breadcrumb_title xsi:nil="true"/>
-            <image base-id="http://xml.zeit.de/zeit-magazin/test-cp/meine-testkarte-bildergruppe/" type="png" align="left" publication-date="" expires="">
-              <bu xsi:nil="true"/>
-              <copyright py:pytype="str">© Zeit</copyright>
-            </image>
-            <author href="http://xml.zeit.de/autoren/E/Maria_Exner/index" publication-date="" expires="">
-              <display_name py:pytype="str">Maria Exner</display_name>
-            </author>
-          </block>
-        </container>
-        <container cp:type="teaser" module="zmo-card-flip-flip" hide-dupes="True" visible="True" cp:__name__="id-381c8f6a-dc39-40e3-a919-09aa41eaa7c6" background_color="c3e76d">
-          <block href="http://xml.zeit.de/zeit-magazin/test-cp/card-flip-flip" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/card-flip-flip" year="2014" issue="19" ressort="zeit-magazin" contenttype="article" publication-date="" expires="" author="Maria Exner" date-last-modified="2014-05-05T09:37:35+00:00" date-first-released="" date-last-published="" last-semantic-change="2014-05-05T09:37:21.413549+00:00">
-            <supertitle py:pytype="str">spitzmarke</supertitle>
-            <teaser_supertitle py:pytype="str">Flip &amp; Flip</teaser_supertitle>
-            <title py:pytype="str">Teaserüberschrift</title>
-            <text py:pytype="str">Mein Teasertext</text>
-            <description py:pytype="str">Mein Teasertext</description>
-            <byline xsi:nil="true"/>
-            <breadcrumb_title xsi:nil="true"/>
-            <image base-id="http://xml.zeit.de/zeit-magazin/test-cp/eine-transparente-banane/" type="png" align="left" publication-date="" expires="">
-              <bu xsi:nil="true"/>
-              <copyright py:pytype="str">© Zeit</copyright>
-            </image>
-            <author href="http://xml.zeit.de/autoren/E/Maria_Exner/index" publication-date="" expires="">
-              <display_name py:pytype="str">Maria Exner</display_name>
-            </author>
-          </block>
-        </container>
-        <container cp:type="teaser" module="zmo-product-square" hide-dupes="True" visible="True" cp:__name__="id-3d2116f6-96dd-4556-81f7-d7d0a40435e5">
-          <block href="http://xml.zeit.de/zeit-magazin/test-cp/liebeskolumne-rationalitaet-emotionen" uniqueId="http://xml.zeit.de/zeit-magazin/test-cp/liebeskolumne-rationalitaet-emotionen" year="2014" issue="17" ressort="zeit-magazin" author="Wolfgang Schmidbauer" contenttype="article" publication-date="2014-04-16T07:45:00+00:00" expires="" date-last-modified="2014-05-03T17:07:53+00:00" date-first-released="2014-04-16T06:00:00+00:00" date-last-published="2014-04-16T07:13:05.834879+00:00" last-semantic-change="2014-05-03T17:07:52.037345+00:00">
-            <supertitle py:pytype="str">Die großen Fragen der Liebe</supertitle>
-            <teaser_supertitle py:pytype="str">Die großen Fragen der Liebe </teaser_supertitle>
-            <title py:pytype="str">Ist sie zu rational?</title>
-            <text py:pytype="str">Wolfgang Schmidbauer ist einer der bekanntesten deutschen Paartherapeuten. Hier beantwortet er jede Woche eine große Frage der Liebe. </text>
-            <description py:pytype="str">Wolfgang Schmidbauer ist einer der bekanntesten deutschen Paartherapeuten. Hier beantwortet er jede Woche eine große Frage der Liebe. </description>
-            <byline py:pytype="str">von Wolfgang Schmidbauer</byline>
-            <breadcrumb_title xsi:nil="true"/>
-            <image base-id="http://xml.zeit.de/zeit-magazin/test-cp/paar-abgewendet-streit/" type="jpg" title="Emotionale Kälte" alt="Paar steht abgewendet nebeneinander" align="left" publication-date="" expires="">
-              <bu py:pytype="str">Paar steht abgewendet nebeneinander</bu>
-              <copyright link="http://www.photocase.de/milchhonig">© milchhonig / photocase.de</copyright>
-            </image>
-            <author href="http://xml.zeit.de/autoren/S/Wolfgang_Schmidbauer/index.xml" publication-date="" expires="">
-              <display_name py:pytype="str">Wolfgang Schmidbauer</display_name>
-            </author>
-          </block>
-        </container>
 
 
       </region>
